--- a/html/Student/PersonalAccount/techServiceStudent.html
+++ b/html/Student/PersonalAccount/techServiceStudent.html
@@ -49,6 +49,7 @@
                     </div>
                 </div>
             </nav>
+            <h2 class="w-75 mt-3">Напишите нам и мы ответим так быстро, как только сможем.</h2>
             <div class="personal-account-body">
                 <ul class="list-group list-group-flush" id="list-computer">
                     <li class="list-group-item"><a href="#">Настройки профиля</a></li>
@@ -58,7 +59,6 @@
                     <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
                 </ul>
                 <div class="technical-chat">
-                    <h2 class="w-75 mb-5">Напишите нам и мы ответим так быстро, как только сможем.</h2>
                     <div class="card">
                         <div class="card-header">
                             <img src="../../../images/avatar.png" class="img-fluid" alt="Avatar">
@@ -81,7 +81,7 @@
 
                 </div>
             </div>
-            <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
+            <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark ">
                 <div class="container">
                     <div class="computer-footer">
                         <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
@@ -126,6 +126,7 @@
                             <li><button type="button" name="button" class="social-button">wa</button></li>
                         </ul>
                     </div>
+                </div>
             </footer>
         </div>
         <script type="text/javascript" src="../../../src/js/chat.js"></script>
