--- a/html/Teacher/PersonalAccount/techServiceTeacher.html
+++ b/html/Teacher/PersonalAccount/techServiceTeacher.html
@@ -49,6 +49,7 @@
                     </div>
                 </div>
             </nav>
+            <h2 class="w-75 mt-3">Напишите нам и мы ответим так быстро, как только сможем.</h2>
             <div class="personal-account-body" >
                 <ul class="list-group list-group-flush" id="list-computer">
                     <li class="list-group-item"><a href="#">Настройки профиля</a></li>
@@ -58,7 +59,7 @@
                     <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
                 </ul>
                 <div class="technical-chat">
-                    <h2 class="w-75 mb-5">Напишите нам и мы ответим так быстро, как только сможем.</h2>
+
                     <div class="card">
                         <div class="card-header">
                             <img src="../../../images/avatar.png" class="img-fluid" alt="Avatar">
@@ -126,6 +127,7 @@
                             <li><button type="button" name="button" class="social-button">wa</button></li>
                         </ul>
                     </div>
+                </div>
             </footer>
         </div>
         <script type="text/javascript" src="../../../src/js/chat.js"></script>
