--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -331,7 +331,7 @@
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
                 <div class="computer-footer">
-                    <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
+                    <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
                         <li>EDUSTURM</li>
                         <li class="nav-item">
                             +7 999 954-77-82 <br>
@@ -373,6 +373,7 @@
                         <li><button type="button" name="button" class="social-button">wa</button></li>
                     </ul>
                 </div>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
