--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -149,7 +149,7 @@
     <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
         <div class="container">
             <div class="computer-footer">
-                <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
+                <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
                     <li>EDUSTURM</li>
                     <li class="nav-item">
                         +7 999 954-77-82 <br>
@@ -191,6 +191,7 @@
                     <li><button type="button" name="button" class="social-button">wa</button></li>
                 </ul>
             </div>
+        </div>
     </footer>
     </div>
     <script type="text/javascript" src="../../src/js/chat.js"></script>
