--- a/html/news.html
+++ b/html/news.html
@@ -158,7 +158,7 @@
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-5">
             <div class="container">
                 <div class="computer-footer">
-                    <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
+                    <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
                         <li>EDUSTURM</li>
                         <li class="nav-item">
                             +7 999 954-77-82 <br>
