scrollbars in table payment

--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -155,13 +155,37 @@
                             <h3 class="mb-3">Платежи</h3> <p>выгрузить в Excel</p>
                         </div>
 
-                        <div class="table-responsive">
-                            <table class="table table-borderless payment-table">
+                        <div class="table-responsive" style="height: 300px; overflow: auto">
+                            <table class="table table-borderless payment-table" style="height: 400px">
                                 <tr>
                                     <th><span class="grey-text">дата/время</span></th>
                                     <th><span class="grey-text">сумма</span></th>
                                     <th><span class="grey-text">период</span></th>
                                     <th><span class="grey-text">подписчик</span></th>
+                                </tr>
+                                <tr>
+                                    <td>сегодня</td>
+                                    <td>3 000₽</td>
+                                    <td>3 мес</td>
+                                    <td>Константин Корешков</td>
+                                </tr>
+                                <tr>
+                                    <td>сегодня</td>
+                                    <td>3 000₽</td>
+                                    <td>3 мес</td>
+                                    <td>Константин Корешков</td>
+                                </tr>
+                                <tr>
+                                    <td>сегодня</td>
+                                    <td>3 000₽</td>
+                                    <td>3 мес</td>
+                                    <td>Константин Корешков</td>
+                                </tr>
+                                <tr>
+                                    <td>сегодня</td>
+                                    <td>3 000₽</td>
+                                    <td>3 мес</td>
+                                    <td>Константин Корешков</td>
                                 </tr>
                                 <tr>
                                     <td>сегодня</td>
