--- a/html/Teacher/PersonalAccount/personalAccountTeachersCourses.html
+++ b/html/Teacher/PersonalAccount/personalAccountTeachersCourses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Настройки профиля</title>
+    <title>Мои курсы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../src/css/buttons.css">
     <link rel="stylesheet" href="../../../src/css/footer.css">
@@ -84,7 +84,7 @@
                                     </div>
 
                                 </div>
-                                <img src="../../../images/iconCourses.png" class="img-fluid img-computer" alt="Designer">
+                                <img src="../../../images/iconCourses.png" class="img-fluid img-computer h-50 w-25" alt="Designer">
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
@@ -103,7 +103,7 @@
                                     </div>
 
                                 </div>
-                                <img src="../../../images/iconCourses.png" class=" img-fluid img-computer" alt="Designer">
+                                <img src="../../../images/iconCourses.png" class=" img-fluid img-computer h-50 w-25" alt="Designer">
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -122,7 +122,7 @@
                                     </div>
 
                                 </div>
-                                <img src="../../../images/iconCourses.png" class="img-fluid img-computer" alt="Designer">
+                                <img src="../../../images/iconCourses.png" class="img-fluid img-computer h-50 w-25" alt="Designer">
                             </div>
                         </div>
                     </div>
