--- a/html/Teacher/Courses/teacherCourses.html
+++ b/html/Teacher/Courses/teacherCourses.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -84,7 +84,7 @@
             </div>
             <button type="button" class="button-rate" name="button">Показать еще</button>
         </div>
-        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
+        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-auto">
             <div class="container">
                 <div class="computer-footer">
                     <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
