--- a/html/Teacher/PersonalAccount/techServiceTeacher.html
+++ b/html/Teacher/PersonalAccount/techServiceTeacher.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="../../../src/css/Student/PersonalAccount/main.css">
         <link rel="stylesheet" href="../../../src/css/Student/PersonalAccount/TechService/main.css">
     </head>
-    <body>
-        <div class="container">
+    <body >
+        <div class="container d-flex flex-column min-vh-100">
             <nav class="navbar navbar-light bg-white navbar-computer">
                 <div class="container">
                     <a class="navbar-brand" href="#">
@@ -82,7 +82,7 @@
 
                 </div>
             </div>
-            <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
+            <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-auto mt-auto">
                 <div class="container">
                     <div class="computer-footer">
                         <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
