--- a/html/news.html
+++ b/html/news.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -155,7 +155,7 @@
         </div>
 
 
-        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-5">
+        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-auto mt-5">
             <div class="container">
                 <div class="computer-footer">
                     <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
