--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -155,8 +155,8 @@
                             <h3 class="mb-3">Платежи</h3> <p>выгрузить в Excel</p>
                         </div>
 
-                        <div class="table-responsive" style="height: 300px; overflow: auto">
-                            <table class="table table-borderless payment-table" style="height: 400px">
+                        <div class="table-responsive">
+                            <table class="table table-borderless payment-table">
                                 <tr>
                                     <th><span class="grey-text">дата/время</span></th>
                                     <th><span class="grey-text">сумма</span></th>
