--- a/html/Student/PersonalAccount/personalAccountPaymentStudent.html
+++ b/html/Student/PersonalAccount/personalAccountPaymentStudent.html
@@ -89,8 +89,8 @@
                             5 999 руб.
                         </div>
                     </div>
+                    
                 </div>
-
             </div>
 
         </div>
@@ -143,6 +143,7 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../../../src/js/paginationPayment.js"></script>
 </body>
 
 </html>
