--- a/html/Student/privateMessagesStudent.html
+++ b/html/Student/privateMessagesStudent.html
@@ -76,7 +76,7 @@
                 </div>
 
             </div>
-            <div class="card chat-first">
+            <div class="card chat chat-first">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
@@ -99,7 +99,7 @@
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
                 </div>
             </div>
-            <div class="card chat-second">
+            <div class="card chat chat-second">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
@@ -122,7 +122,7 @@
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
                 </div>
             </div>
-            <div class="card chat-third">
+            <div class="card chat chat-third">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
