--- a/html/Student/privateMessagesStudent.html
+++ b/html/Student/privateMessagesStudent.html
@@ -146,6 +146,9 @@
                 </div>
             </div>
         </div>
+        <div class="return-mobile">
+            назад
+        </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-auto">
             <div class="container">
                 <div class="computer-footer">
