--- a/html/Auth/requestNewPassword.html
+++ b/html/Auth/requestNewPassword.html
@@ -19,15 +19,15 @@
                     <img src="../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <img src="../../images/toggleIcon.svg" alt="Toggle Icon">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
-                        <button type="button" name="button" class="profile-button">
-                            <img src="../../images/profile.svg" alt="Profile">
-                        </button>
+                        <li class="nav-item"><a class="nav-link" href="#">На главную</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Вход</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Регистрация</a></li>
                     </ul>
                 </div>
             </div>
