--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Преимущества</a>
+                            <a class="nav-link" href="#">Преимущества</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Курсы</a>
