fixed mobile version of rates

--- a/html/courses.html
+++ b/html/courses.html
@@ -66,7 +66,7 @@
                 <div class="description">
                     Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                 </div>
-                <button type="button" name="button" class="green-button">Записаться на курс</button>
+                <button type="button" name="button" class="green-button head-course-button">Записаться на курс</button>
             </div>
             <img src="../images/iconCourses.png" class="icon-head-course-computer" alt="Course icon">
         </div>
