mobile version of main page fixed

--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
                         <li>Выберите вектор развития</li>
                         <li>Действуйте!</li>
                     </ul>
-                    <button class="green-button">Получить курс</button>
+                    <button class="green-button main-page-header-button">Получить курс</button>
                 </div>
             </div>
             <div class="mobile-header">
