margin bottom to whole block instead img

--- a/html/news.html
+++ b/html/news.html
@@ -85,7 +85,7 @@
                     алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
                     Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.<br><br>
                 </div>
-                <div class="img-gradient w-100 mb-5">
+                <div class="img-gradient w-100">
                     <img src="../images/newsSecondImg.png" class="img-fluid w-100" alt="Second Img">
                 </div>
             </div>
