fixed mobile version contacts

--- a/html/courses.html
+++ b/html/courses.html
@@ -297,7 +297,7 @@
                     <input type="text" name="name" class="form-control" value="" placeholder="Ваше имя" style="height: 3rem;">
                     <input type="text" name="email" class="form-control" value="" placeholder="Ваш e-mail" style="height: 3rem;">
                     <input type="text" name="comment" class="form-control" value="" placeholder="Ваш комментарий" style="height: 10rem;">
-                    <button type="button" name="button" class="green-button">Отправить</button>
+                    <button type="button" name="button" class="green-button contacts-button">Отправить</button>
                     <div class="conditions">
                         Нажимая кнопку, вы соглашаетесь с условиями политики обработки персональных данных
                     </div>
