--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -76,7 +76,7 @@
                 </div>
 
             </div>
-            <div class="card chat-first">
+            <div class="card chat chat-first">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
@@ -99,7 +99,7 @@
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
                 </div>
             </div>
-            <div class="card chat-second">
+            <div class="card chat chat-second">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
@@ -122,7 +122,7 @@
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
                 </div>
             </div>
-            <div class="card chat-third">
+            <div class="card chat chat-third">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
@@ -146,53 +146,56 @@
                 </div>
             </div>
         </div>
-    <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-auto">
-        <div class="container">
-            <div class="computer-footer">
-                <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
-                    <li>EDUSTURM</li>
-                    <li class="nav-item">
-                        +7 999 954-77-82 <br>
-                        pochta@gmail.com
-                    </li>
-                    <li><button type="button" name="button" class="social-button">vk</button></li>
-                    <li><button type="button" name="button" class="social-button">tg</button></li>
-                    <li><button type="button" name="button" class="social-button">wa</button></li>
-                    <li class="nav-item">
-                        Политика <br> конфиденциальности
-                    </li>
-                </ul>
-            </div>
-            <div class="mobile-footer">
-                <div class="mt-3">
-                    EDUSTURM
+        <div class="return-mobile">
+            назад
+        </div>
+        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-auto">
+            <div class="container">
+                <div class="computer-footer">
+                    <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
+                        <li>EDUSTURM</li>
+                        <li class="nav-item">
+                            +7 999 954-77-82 <br>
+                            pochta@gmail.com
+                        </li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
+                        <li class="nav-item">
+                            Политика <br> конфиденциальности
+                        </li>
+                    </ul>
                 </div>
-                <div class="row  row-cols-sm-2   mt-3">
-                    <div class="col mb-3">
-                        <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Главная</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Преимущества</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Курсы</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Политика конфиденциальности</a></li>
-                        </ul>
+                <div class="mobile-footer">
+                    <div class="mt-3">
+                        EDUSTURM
                     </div>
+                    <div class="row  row-cols-sm-2   mt-3">
+                        <div class="col mb-3">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Главная</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Преимущества</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Курсы</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Политика конфиденциальности</a></li>
+                            </ul>
+                        </div>
 
-                    <div class="col mb-3">
-                        <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Новости</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">О нас</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Контакты</a></li>
-                        </ul>
+                        <div class="col mb-3">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Новости</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">О нас</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Контакты</a></li>
+                            </ul>
+                        </div>
                     </div>
+                    <ul class="nav justify-content-start flex-row mb-3 gap-4">
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
+                    </ul>
                 </div>
-                <ul class="nav justify-content-start flex-row mb-3 gap-4">
-                    <li><button type="button" name="button" class="social-button">vk</button></li>
-                    <li><button type="button" name="button" class="social-button">tg</button></li>
-                    <li><button type="button" name="button" class="social-button">wa</button></li>
-                </ul>
             </div>
-        </div>
-    </footer>
+        </footer>
     </div>
     <script type="text/javascript" src="../../src/js/chat.js"></script>
     <script type="text/javascript" src="../../src/js/activeChat.js"></script>
