mobile carousel of rates

--- a/html/courses.html
+++ b/html/courses.html
@@ -214,6 +214,129 @@
             </div>
         </div>
     </div>
+    <div class=" container d-flex justify-content-center mb-5 mt-5">
+        <div class="carousel-rates-container">
+            <div id="carouselRates" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselRates" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselRates" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselRates" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="rate">
+                            <h2>C куратором</h2>
+                            <img src="../images/lineRate.png" alt="line">
+                            <div class="text-rate">
+                                <div>
+                                    4 модуля
+                                </div>
+                                <div>
+                                    14 практических уроков
+                                </div>
+                                <div>
+                                    Общий чат студентов
+                                </div>
+                                <div>
+                                    В подарок при оплате бонусный урок “Лалала”
+                                </div>
+                                <div>
+                                    4 модуля
+                                </div>
+                                <div>
+                                    14 практических уроков
+                                </div>
+                                <div>
+                                    Общий чат студентов
+                                </div>
+                                <div>
+                                    В подарок при оплате бонусный урок “Лалала”
+                                </div>
+                            </div>
+                            <div class="price">
+                                15 999 руб.
+                            </div>
+                            <button type="button" name="button" class="button-rate">Выбрать тариф</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="rate">
+                            <h2>Я сам</h2>
+                            <img src="../images/lineRate.png" alt="line">
+                            <div class="text-rate">
+                                <div class="">
+                                    4 модуля
+                                </div>
+                                <div class="">
+                                    14 практических уроков
+                                </div>
+                                <div class="">
+                                    Общий чат студентов
+                                </div>
+                                <div class="">
+                                    В подарок при оплате бонусный урок “Лалала”
+                                </div>
+                                <div class="">
+                                    4 модуля
+                                </div>
+                                <div class="">
+                                    14 практических уроков
+                                </div>
+                                <div class="">
+                                    Общий чат студентов
+                                </div>
+                                <div class="">
+                                    В подарок при оплате бонусный урок “Лалала”
+                                </div>
+                            </div>
+                            <div class="price">
+                                5 999 руб.
+                            </div>
+                            <button type="button" name="button" class="button-rate">Выбрать тариф</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="rate">
+                            <h2>VIP</h2>
+                            <img src="../images/lineRate.png" alt="line">
+                            <div class="text-rate">
+                                <div class="">
+                                    4 модуля
+                                </div>
+                                <div class="">
+                                    14 практических уроков
+                                </div>
+                                <div class="">
+                                    Общий чат студентов
+                                </div>
+                                <div class="">
+                                    В подарок при оплате бонусный урок “Лалала”
+                                </div>
+                                <div class="">
+                                    4 модуля
+                                </div>
+                                <div class="">
+                                    14 практических уроков
+                                </div>
+                                <div class="">
+                                    Общий чат студентов
+                                </div>
+                                <div class="">
+                                    В подарок при оплате бонусный урок “Лалала”
+                                </div>
+                            </div>
+                            <div class="price">
+                                50 999 руб.
+                            </div>
+                            <button type="button" name="button" class="button-rate">Выбрать тариф</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <div class="feedback">
         <div class="container">
             <h1>Отзывы</h1>
