--- a/html/Student/Courses/userLesson.html
+++ b/html/Student/Courses/userLesson.html
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="homework-form">
                 <form>
-                    <legend class="headForm">Загрузка ДЗ</legend>
+                    <legend class="head-form">Загрузка ДЗ</legend>
                     <div class="linkInput mb-3">
                         <input placeholder="Ссылка" class="form-control" id="link">
                     </div>
@@ -128,6 +128,12 @@
                         </div>
                         <div class="result">
                         </div>
+                    </div>
+                    <div class="add-files-mobile">
+                        <label for="fileElem" class="choose-file">
+                            Добавьте файлы
+                        </label>
+                        <input type="file" class="input-files" id="fileElem">
                     </div>
                     <button type="button" class="button-signin" name="button">Отправить на проверку</button>
                 </div>
