--- a/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
@@ -71,7 +71,8 @@
                                 <img src="../../../images/accountPhoto.svg" alt="add photo">
                             </div>
                             <div class="add-photo">
-                                Добавить фото
+                                <label for="addPic" class="add-pic">Добавить фото</label>
+                                <input type="file" class="input-files" accept=".png, .jpg, .jpeg" id="addPic">
                             </div>
                         </div>
                         <div class="mb-3 teacher-settings-input">
