fixed height table

--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -155,7 +155,7 @@
                             <h3 class="mb-3">Платежи</h3> <p>выгрузить в Excel</p>
                         </div>
 
-                        <div class="table-responsive">
+                        <div class="table-responsive fixed-height-table">
                             <table class="table table-borderless payment-table">
                                 <tr>
                                     <th><span class="grey-text">дата/время</span></th>
