text break, mobile text smaller

--- a/html/Student/Courses/pageCourseStudent.html
+++ b/html/Student/Courses/pageCourseStudent.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </div>
-        <h1 class="modules-header">Образовательные модули</h1>
+        <h1 class="modules-header text-break">Образовательные модули</h1>
         <div class="modules">
             <div class="module">
                 <div class="description-module">
