--- a/html/Student/Courses/recommendCourses.html
+++ b/html/Student/Courses/recommendCourses.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </nav>
-        <h1 class="mb-5 mt-5 recomend-course-header">Рекомендованные курсы</h1>
+        <h1 class="mb-5 mt-5 recommend-course-header text-break">Рекомендованные курсы</h1>
 
         <div class="course-faces">
             <div class="course-face">
