return button display none

--- a/html/Student/privateMessagesStudent.html
+++ b/html/Student/privateMessagesStudent.html
@@ -145,7 +145,7 @@
                 </div>
             </div>
         </div>
-        <div class="return-mobile">
+        <div class="return-mobile" style="display: none;">
             назад
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-auto">
