key code to key, scroll to bottom

--- a/html/Student/privateMessagesStudent.html
+++ b/html/Student/privateMessagesStudent.html
@@ -93,6 +93,7 @@
                         </div>
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                     </div>
+                    <div class="anchor"></div>
                 </div>
                 <div class="card-footer border-0 pb-5">
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
@@ -116,6 +117,7 @@
                         </div>
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                     </div>
+                    <div class="anchor"></div>
                 </div>
                 <div class="card-footer border-0 pb-5">
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
@@ -139,6 +141,7 @@
                         </div>
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                     </div>
+                    <div class="anchor"></div>
                 </div>
                 <div class="card-footer border-0 pb-5">
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
