--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -94,6 +94,7 @@
                         </div>
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                     </div>
+                    <div class="anchor"></div>
                 </div>
                 <div class="card-footer border-0 pb-5">
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
@@ -117,6 +118,7 @@
                         </div>
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                     </div>
+                    <div class="anchor"></div>
                 </div>
                 <div class="card-footer border-0 pb-5">
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
@@ -140,6 +142,7 @@
                         </div>
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                     </div>
+                    <div class="anchor"></div>
                 </div>
                 <div class="card-footer border-0 pb-5">
                     <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
